# triputary

./: Cargo.toml  flake.nix
src/: audio_excerpt.rs  config_file.rs  consts.rs  cut.rs  main.rs  recording_session.rs  session_manager.rs
src/audio/: buffer.rs  cut.rs  cutter.rs  cutting_strategy.rs  cutting_thread.rs  excerpt.rs  mod.rs  playback.rs  sample_reader.rs  time.rs
src/config/: cli.rs  config_file.rs  mod.rs  service.rs  sound_server.rs
src/gui/: cutting_thread.rs  mod.rs  playback.rs  plot.rs  session_gui.rs  session_manager.rs  session_selector.rs
src/recording/: audio_recorder.rs  dbus.rs  dbus_event.rs  mod.rs  recorder.rs
