[package]
name = "striputary"
version = "0.1.1"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
edition = "2021"
resolver="2"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
dbus = "0.9.7"
hound = "3.5.1"
log = "0.4.22"
regex = "1"
rodio = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1.0"
simplelog = "0.12.2"
time = { version = "0.3.36", default-features = false }
xdg = "2.5.2"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
features = ["canvas"]